<resources>
    <string name="app_name">ApPractiqa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="banner_ad_unit_id">ca-app-pub-3465726964424797/5623539183</string>

    <string name="title_choose_image_provider">Choose</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_camera">Camera</string>

    <string name="image_picker_provider_authority_suffix">.provider</string>

    <string name="message_gallery_permission_denied">Read External Storage permissions is needed to select Image. Please turn on requested permissions from Settings > Permissions.</string>
    <string name="message_camera_permission_denied">Camera and External Storage permissions are needed to capture image. Turning off any permission won\'t allow application run smoothly. Please turn on all requested permissions from Settings > Permissions.</string>
    <string name="permission_gallery_denied">
        <![CDATA[Storage permission is needed to pick gallery image. Please allow storage permission from Settings > Permissions.]]></string>
    <string name="permission_camera_extended_denied">
        <![CDATA[Camera and Storage permissions are needed to take a picture. Please allow both the requested permissions from Settings > Permissions.]]></string>
    <string name="permission_camera_denied">
        <![CDATA[Storage permission is needed to take a picture. Please allow storage permission from Settings > Permissions.]]></string>

    <string name="error_failed_to_create_camera_image_file">Failed to create Camera image file</string>
    <string name="error_failed_pick_gallery_image">Failed to pick Gallery image</string>
    <string name="error_failed_to_crop_image">Failed to crop image</string>
    <string name="error_failed_to_compress_image">Failed to compress image</string>
    <string name="error_task_cancelled">Task Cancelled</string>
    <string name="title_activity_load_data">LoadDataActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
