<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.yogile.appractiqa.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_users"
        android:name="com.yogile.appractiqa.ui.users.UsersFragment"
        android:label="Users and Groups"
        tools:layout="@layout/users_fragment" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.yogile.appractiqa.ui.admin_settings.AdminSettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_admin_settings" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.yogile.appractiqa.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.yogile.appractiqa.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.yogile.appractiqa.ui.users.tabs.users.UsersTab"
        android:label="@string/menu_share"
        tools:layout="@layout/tab_users" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.yogile.appractiqa.ui.users.tabs.groups.GroupsTab"
        android:label="@string/menu_send"
        tools:layout="@layout/tab_groups" />
</navigation>